--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,12 +36,16 @@
 }
 
 .font-size-sub {
-  font-family:font-family: 'Open Sans', sans-serif;
+  font-family:'Open Sans', sans-serif;
   font-size: 24px;
 }
 
 .font-personalized-movil {
   font-size: 66px;
+}
+
+ul.hidden {
+  display: none;
 }
 
 .justify-content-center {
