--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -199,7 +199,8 @@ ul.hidden {
 
 .menu-list li a{
   display: block;
-  padding: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
   text-decoration: none;
   font-family:'Open Sans', sans-serif;
   border-bottom: 1px solid white;
@@ -234,7 +235,8 @@ ul.hidden {
 
 .title-h1 {
   font-family: 'Poppins', sans-serif;
-  font-size: 21px;
+	font-size: 21px;
+	text-align: center;
 }
 
 .text-paragrap {
@@ -292,6 +294,19 @@ ul.hidden {
   background-size: cover;
 }
 
+.pt-1 {
+  padding-top: 0.25rem;
+}
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-3 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .sub-line {
   border-bottom:5px solid #20c997;
 }
@@ -307,6 +322,16 @@ ul.hidden {
 	.col-sm {
 		flex: 1 0 0%;
 	}
+	.bg-red {
+		background-color: royalblue;
+	}
+
+	.title-h1-sm {
+		font-family: 'Poppins', sans-serif;
+		font-size: 21px;
+		text-align: left;
+	}
+	
 	
 	.col-sm-auto {
 		width: auto;
