--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -365,7 +365,7 @@ ul.hidden {
   width: 100%;
   height: 520px;
   background-color: #c738385d;
-  background-image: url("../img/personas-programando-imagen-de-fondo-principal.jpg");
+  background-image: url("../img/developers.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
