--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,6 +30,10 @@ p {
   background-color: #1e1f26;
 }
 
+.border-menu {
+	border-bottom: 2px solid #007bff;
+}
+
 .bg-greenlight {
 	background-color: #20c997;
 }
@@ -152,9 +156,8 @@ div ul {
 
 .img-ecommerce {
   width: 100%;
-  height: 300px;
+	height: 200px;
   border-radius: 10px;
-  box-sizing: border-box;
   box-shadow: 0px 0px 5px red;
   background-color: #1a17da7e;
   background-image: url("../img/ecommerce.png");
@@ -166,13 +169,14 @@ div ul {
   content: "Tienda Ecommerce";
   position: absolute;
   background-color: rgba(0, 0, 0, 0.4);
-  display: flex;
+	display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 10px;
   color: white;
   font-family: 'Poppins', sans-serif;
-  font-size: 20px;
+	font-size: 20px;
+	border-radius: 10px;
   top: 0;
   bottom: 0;
   left: 0;
@@ -240,8 +244,8 @@ ul.hidden {
 }
 
 .mx-3 {
-  margin-right: 3px;
-  margin-left: 3px;
+  margin-right: 1rem;
+  margin-left: 1rem;
 }
 
 .mx-4 {
@@ -258,6 +262,9 @@ ul.hidden {
   margin-bottom: 0.25rem;
 }
 
+.mt-0 {
+	margin-top: 0;
+}
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -266,8 +273,8 @@ ul.hidden {
   margin-top: 1rem;
 }
 
-.mt-10 {
-  margin-top: 10px;
+.mt-4 {
+  margin-top: 1.5rem;
 }
 
 .mt-menos-center {
@@ -375,6 +382,13 @@ ul.hidden {
 .p-relative {
   position: relative;
   
+}
+
+.z1 {
+	position: fixed;
+	margin-top: -1.5px;
+	width: 100%;
+	z-index: 99;
 }
 
 .p.absolute {
@@ -528,6 +542,18 @@ ul.hidden {
 	
 	.col-sm-12 {
 		width: 100%;
+	}
+
+	.img-ecommerce {
+		width: 100%;
+		height: 200px;
+		border-radius: 10px;
+		box-sizing: border-box;
+		box-shadow: 0px 0px 5px red;
+		background-color: #1a17da7e;
+		background-image: url("../img/ecommerce.png");
+		background-repeat: no-repeat;
+		background-size: cover;
 	}
 }
 
