--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -295,6 +295,10 @@ ul.hidden {
   margin-top: 1.5rem;
 }
 
+.mt-95 {
+	margin-top: 95px;
+}
+
 .mt-menos-center {
   margin-top: -60px;
 }
@@ -307,6 +311,10 @@ ul.hidden {
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
+}
+
+.height {
+	height: 100%;
 }
 
 .my-4 {
@@ -407,8 +415,9 @@ ul.hidden {
 }
 
 .p-sticky {
-	position: sticky;
-	top:0px;
+	position: fixed;
+	top:0;
+	width: 100%;
 	z-index: 5;
 }
 
@@ -423,7 +432,7 @@ ul.hidden {
 
 .programador-principal {
   width: 100%;
-  height: 520px;
+	height: 520px;
   background-color: #c738385d;
   background-image: url("../img/developers.png");
   background-repeat: no-repeat;
@@ -514,6 +523,7 @@ ul.hidden {
 	.mt-menos-center-sm {
 		margin-top: -70px;
 	}
+
 
 	.title-h1-sm {
 		font-family: 'Poppins', sans-serif;
